--- a/conf/application.conf
+++ b/conf/application.conf
@@ -249,8 +249,9 @@ db {
   #default.url = "jdbc:h2:mem:play"
   #default.username = sa
   #default.password = ""
+
   default.driver = "com.mysql.jdbc.Driver"
-  default.url = "jdbc:mysql://localhost/osean?useUnicode=true&characterEncoding=UTF-8"
+  default.url = "jdbc:mysql://localhost/osean?useUnicode=true&characterEncoding=UTF-8&useSSL=false"
   default.username = "amaseng"
   default.password = "amaseng"
 
